Fix CTA hover and back button alignment

--- a/packages/help-center/src/components/help-center-contact-form.scss
+++ b/packages/help-center/src/components/help-center-contact-form.scss
@@ -121,7 +121,7 @@ section.contact-form-submit {
 			border: 1px solid var(--color-neutral-5) !important;
 			color: var(--color-neutral-20) !important;
 		}
-		&:hover {
+		&:hover:not(:disabled) {
 			color: var(--wp-components-color-accent-inverted, #fff) !important;
 		}
 	}
